add StatefulResult lib

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,17 @@
         android:textAllCaps="false"
         android:text="Mock Fragment" />
 
+    <Button
+        android:id="@+id/btn_stateful"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="stateful" />
+
+    <TextView
+        android:id="@+id/tv_stateful"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="stateful" />
 
 </LinearLayout>
